--- a/web-cms/src/app/super-admin/post/pages/single-post/single-post.component.html
+++ b/web-cms/src/app/super-admin/post/pages/single-post/single-post.component.html
@@ -1,1 +1,88 @@
-<p>single-post works!</p>
+<div class="container py-6 px-24">
+  <div class="mb-4 flex justify-between">
+    <div class="inline-block">
+      <h3 class="font-semibold text-gray-900">Post Dashboard</h3>
+      <div class="space-x-1 text-xs font-medium text-gray-400">
+        <a class="hover:text-primary-500">Post</a>
+        <span> - Edit Post</span>
+      </div>
+    </div>
+  </div>
+
+  <div class="md:col-span-2 xl:col-span-3">
+    <form [formGroup]="form" (ngSubmit)="onSubmit()">
+      <ng-container formGroupName="post">
+        <div class="flex-col rounded-lg bg-white px-8 py-8 sm:flex-row">
+          <div class="mb-4 flex items-center justify-between">
+            <div class="flex-col items-center">
+              <h3 class="text-md font-bold text-gray-900">Edit Post</h3>
+            </div>
+          </div>
+
+          <hr>
+
+          <div class="w-4/5 inline-block pt-6 pr-6 align-top">
+            <input type="hidden" name="id" formControlName="id">
+            <input type="text" id="title" placeholder="Enter title here" formControlName="title"
+              class="text-sm w-full border-black border-opacity-20 border rounded-md h-10 pr-8 pl-2 mb-10 hover:border-opacity-40"
+              required>
+
+            <div class="container mb-10">
+              <ejs-richtexteditor id='defaultRTE' formControlName="HTMLContent" >
+              </ejs-richtexteditor>
+            </div>
+
+            <div class="mb-10 w-full">
+                <div class="w-full border bg-gray-100 p-3">
+                  <h4 class="text-base text-gray-500">RECENT UPDATE</h4>
+                </div>
+                <div *ngFor="let date of table[0].timestamp.reverse()" 
+                class="w-full bg-white border p-3 text-sm">{{ date }}</div>
+              </div>
+          </div>
+
+          <div class="w-1/5 inline-block pt-6 align-top">
+            <div class="mb-10 w-full">
+              <div class="w-full border bg-gray-100 p-3">
+                <h4 class="text-base text-gray-500">PUBLISH OPTIONS</h4>
+              </div>
+              <div class="border">
+                <div class="w-full bg-white px-3 py-2 pt-3 text-sm">Status
+                  <select id="status"
+                    class="text-sm w-full border-black border-opacity-20 border rounded-md h-10 pl-3 hover:border-opacity-40"
+                    formControlName="status"
+                    required>
+                    <option value="draft" default>Draft</option>
+                    <option value="published">Published</option>
+                  </select>
+                </div>
+                <div class="w-full bg-white px-3 py-2 text-sm">Visibility
+                  <select id="visibility"
+                    class="text-sm w-full border-black border-opacity-20 border rounded-md h-10 pl-3 hover:border-opacity-40"
+                    formControlName="visibility"
+                    required>
+                    <option value="public" default>Public</option>
+                    <option value="private">Private</option>
+                  </select>
+                </div>
+                <div class="w-full bg-white px-3 py-2 pb-1 text-sm">
+                  <button type="submit"
+                    class="justify-center w-full h-10 inline-flex items-center bg-red-500 text-white font-semibold border-0 py-2 px-3 focus:outline-none hover:bg-red-600 rounded text-xs"
+                    (click)="deletePost()">
+                    Delete Post
+                  </button>
+                </div>
+                <div class="w-full bg-white px-3 py-2 pb-3 text-sm">
+                  <button type="submit"
+                    class="justify-center w-full h-10 inline-flex items-center bg-mineral-green-500 text-white font-semibold border-0 py-2 px-3 focus:outline-none hover:bg-mineral-green-600 rounded text-xs">
+                    Save
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </ng-container>
+    </form>
+  </div>
+</div>
