--- a/web-cms/src/app/super-admin/app-builder/pages/app-layout/app-layout.component.html
+++ b/web-cms/src/app/super-admin/app-builder/pages/app-layout/app-layout.component.html
@@ -1,1 +1,64 @@
-<p>app-layout works!</p>
+<div class="container py-6 px-24">
+  <div class="mb-4 flex justify-between">
+    <div class="inline-block">
+      <h3 class="font-semibold text-gray-900">App Builder</h3>
+      <div class="space-x-1 text-xs font-medium text-gray-400">
+        <a class="hover:text-primary-500">App Builder</a>
+        <span> - App Layout</span>
+      </div>
+    </div>
+  </div>
+
+  <div class="md:col-span-2 xl:col-span-3">
+    <div class="flex-col rounded-lg bg-white px-8 py-8 sm:flex-row">
+      <div class="mb-4 flex items-center justify-between">
+        <div class="flex-col items-center">
+          <h3 class="text-md font-bold text-gray-900 ">App Layout</h3>
+          <p class="text-gray-500">Select the mobile layout</p>
+        </div>
+      </div>
+
+      <div class="flex-col items-center">
+        <div class="flex justify-center align-middle">
+          <div class="w-auto p-4">
+            <img src="../../../../../assets/layout-1.png" alt="Layout 1" tabindex="0" class="h-[550px] hover:cursor-pointer"
+            (click)="updateLayout('layout-1')">
+            <div class="text-black text-center pt-2 font-semibold text-xl">Post Card Layout</div>
+          </div>
+          <div class="w-auto p-4">
+            <img src="../../../../../assets/layout-2.png" alt="Layout 2" tabindex="0" class="h-[550px] hover:cursor-pointer"
+            (click)="updateLayout('layout-2')">
+            <div class="text-black text-center pt-2 font-semibold text-xl">Post Feed Layout</div>
+          </div>
+        </div>
+        
+        <!-- <select [(ngModel)]="selectedLayout" (ngModelChange)="updateLayout()">
+          <option value="layout-1"></option>
+          <option value="layout-2">Layout 2</option>
+        </select>
+      
+        <div class="layout-preview">
+          <img [src]="selectedLayout" alt="Selected Layout">
+        </div> -->
+
+        <div class="flex items-center justify-end py-4">
+          <div class="flex-col items-center w-[140px] mr-4">
+            <button type="submit"
+              class="justify-center w-full h-10 inline-flex items-center bg-mineral-green-500 text-white font-semibold border-0 py-2 px-3 focus:outline-none hover:bg-mineral-green-600 rounded text-xs"
+              (click)="saveSelection()">
+              Save Selection
+            </button>
+          </div>
+          <div class="flex-col items-center w-[140px]">
+            <button type="submit"
+              class="justify-center w-full h-10 inline-flex items-center bg-mineral-green-500 text-white font-semibold border-0 py-2 px-3 focus:outline-none hover:bg-mineral-green-600 rounded text-xs"
+              (click)="deployApp()">
+              Deploy App
+            </button>
+          </div>
+        </div>
+
+      </div>
+    </div>
+
+  </div>
